Fixed the detail window being 5px too high

--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -220,7 +220,7 @@ nav#dimension
 .planetdetail
 	+abs
 	top: 150px
-	height: 460px
+	height: 455px
 	left: 0
 	right: 0
 	margin: auto
